--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/uk_UK/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/uk_UK/openmediavault-usbbackup.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# zubr139, 2013,2015
+# zubr139, 2013,2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-05-19 15:59+0000\n"
+"Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -169,7 +169,7 @@ msgid "USB Backup"
 msgstr "Резервне копіювання USB"
 
 msgid "Update the destination ACLs to be the same as the source ACLs."
-msgstr ""
+msgstr "Оновлювати ACL призначення, щоб були такимиж як джерело ACL."
 
 msgid ""
 "Update the destination extended attributes to be the same as the local ones."
