--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault-clamav (3.2) stable; urgency=low
 
+  * Update locales.
   * Adapt to new framework.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 03 Jun 2016 08:28:17 +0200
