--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/uk_UK/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/uk_UK/openmediavault-clamav.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# zubr139, 2013-2014
+# zubr139, 2013-2014,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2015-09-26 12:22+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-05-24 16:47+0000\n"
+"Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -63,7 +63,7 @@ msgid "Enable"
 msgstr "Увімкнути"
 
 msgid "Enable HTML detection and normalisation."
-msgstr ""
+msgstr "Увімкнути виявлення HTML і нормалізації."
 
 msgid "Enable archive scanning."
 msgstr ""
@@ -80,7 +80,7 @@ msgid ""
 msgstr ""
 
 msgid "Enable scanning within PDF files."
-msgstr ""
+msgstr "Дозволити перевірку всередині PDF-файлів."
 
 msgid "Enable the algorithmic detection."
 msgstr ""
@@ -199,7 +199,7 @@ msgid "Send command output via email"
 msgstr ""
 
 msgid "Send email"
-msgstr ""
+msgstr "Відправити лист"
 
 msgid "Settings"
 msgstr "Налаштування"
