--- a/deb/openmediavault-iscsitarget/usr/share/openmediavault/locale/uk_UK/openmediavault-iscsitarget.po
+++ b/deb/openmediavault-iscsitarget/usr/share/openmediavault/locale/uk_UK/openmediavault-iscsitarget.po
@@ -3,13 +3,13 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# zubr139, 2013
+# zubr139, 2013,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2013-12-30 16:24+0000\n"
+"PO-Revision-Date: 2016-05-24 16:49+0000\n"
 "Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
@@ -81,7 +81,7 @@ msgid "Error recovery level"
 msgstr ""
 
 msgid "Extra options"
-msgstr ""
+msgstr "Додаткові опції"
 
 msgid "File IO"
 msgstr ""
@@ -145,7 +145,7 @@ msgid "Immediate data"
 msgstr ""
 
 msgid "Incoming"
-msgstr ""
+msgstr "Вхідний"
 
 msgid "Initial R2T"
 msgstr ""
