--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-lvm2 (3.1) stable; urgency=low
+
+  * Update locales.
+  * Adapt to new framework.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 04 Jun 2016 09:38:03 +0200
+
 openmediavault-lvm2 (3.0.1) stable; urgency=low
 
   * Update locales.
