--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/uk_UK/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/uk_UK/openmediavault-lvm2.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# zubr139, 2013
+# zubr139, 2013,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-05-03 12:28+0000\n"
+"Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -60,7 +60,7 @@ msgid "Do you really want to create the volume group?"
 msgstr "Справді бажаєте створити групу розділів?"
 
 msgid "Do you really want to resize the selected physical volume?"
-msgstr ""
+msgstr "Бажаєте змінити розмір даного фізичного розділу?"
 
 msgid "Edit logical volume"
 msgstr "Редагувати логічний розділ"
@@ -108,7 +108,7 @@ msgid "Reduce volume group"
 msgstr "Зменшити групу розділів"
 
 msgid "Resize"
-msgstr ""
+msgstr "Змінити розмір"
 
 msgid "Select a volume group ..."
 msgstr "Оберіть групу розділів ..."
