--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault-netatalk (3.1) stable; urgency=low
 
+  * Update locales.
   * Adapt to new framework.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 03 Jun 2016 08:29:18 +0200
