--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault-shairport (3.2) stable; urgency=low
 
+  * Update locales.
   * Adapt to new framework.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 03 Jun 2016 08:02:47 +0200
