--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/uk_UK/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/uk_UK/openmediavault-shairport.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# zubr139, 2015
+# zubr139, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2015-10-31 15:24+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-05-19 16:01+0000\n"
+"Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,7 +31,7 @@ msgid "General settings"
 msgstr "Загальні налаштування"
 
 msgid "Name"
-msgstr ""
+msgstr "Ім'я"
 
 msgid "Password"
 msgstr "Пароль"
@@ -43,4 +43,4 @@ msgid "Shairport"
 msgstr "Shairport"
 
 msgid "The name the service will advertise to iTunes."
-msgstr ""
+msgstr "Ім'я служби реклами ITunes."
