--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault-usbbackup (3.1) stable; urgency=low
 
+  * Update locales.
   * Adapt to new framework.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 03 Jun 2016 08:31:20 +0200
