--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (2.2.5) stable; urgency=low
+
+  * Improve USB and rotational storage device detection.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 04 Jun 2016 11:12:59 +0200
+
 openmediavault (2.2.4) stable; urgency=low
 
   * Various improvements and bugfixes.
