--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.22) stable; urgency=low
+
+  * Various improvements and bugfixes.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 06 Jun 2016 09:21:33 +0200
+
 openmediavault (3.0.21) stable; urgency=low
 
   * Various improvements and bugfixes.
