--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-usbbackup (3.2) stable; urgency=low
+
+  * Adapt to new framework.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 06 Jun 2016 16:37:22 +0200
+
 openmediavault-usbbackup (3.1) stable; urgency=low
 
   * Update locales.
