--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.23) stable; urgency=low
+
+  * 
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Thu, 09 Jun 2016 22:40:29 +0200
+
 openmediavault (3.0.22) stable; urgency=low
 
   * Update locales.
