--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-usbbackup (3.2.1) stable; urgency=low
+
+  * Fix various bugs.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 10 Jun 2016 11:20:39 +0200
+
 openmediavault-usbbackup (3.2) stable; urgency=low
 
   * Adapt to new framework.
