--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (3.0.23) stable; urgency=low
 
-  * 
+  * Various improvements and bugfixes.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 09 Jun 2016 22:40:29 +0200
 
