--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-lvm2 (3.1.1) stable; urgency=low
+
+  * Fix bug in RPC.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 11 Jun 2016 02:14:40 +0200
+
 openmediavault-lvm2 (3.1) stable; urgency=low
 
   * Update locales.
