--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -3,6 +3,7 @@ openmediavault (3.0.23) stable; urgency=low
   * Various improvements and bugfixes.
   * Mantis 0001543: Can't change SMART options.
   * Mantis 0001544: Could not disable notifications.
+  * Mantis 0001546: Bug in 'Diagnostics | Services | SSH'.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Thu, 09 Jun 2016 22:40:29 +0200
 
