Mantis 0001557: Fix omv-firstaid issue. The globals.inc file was missing.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (3.0.25) stable; urgency=low
 
   * Mantis 0001554: Can't define a hostname with blank domain name.
+  * Mantis 0001557: Fix omv-firstaid issue.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 20 Jun 2016 23:41:50 +0200
 
