* Mantis 0001558: Can't add a scheduled S.M.A.R.T. job. * Update locales.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,7 +1,9 @@
 openmediavault (3.0.25) stable; urgency=low
 
+  * Update locales.
   * Mantis 0001554: Can't define a hostname with blank domain name.
   * Mantis 0001557: Fix omv-firstaid issue.
+  * Mantis 0001558: Can't add a scheduled S.M.A.R.T. job.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 20 Jun 2016 23:41:50 +0200
 
