--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-06-04 08:17+0000\n"
+"PO-Revision-Date: 2016-06-19 01:48+0000\n"
 "Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
@@ -2568,7 +2568,7 @@ msgid "Ranges of numbers are not allowed"
 msgstr " 不允许的数字范围"
 
 msgid "Raw value"
-msgstr "原始值"
+msgstr "实测值"
 
 msgid "Read only"
 msgstr "只读"
@@ -4030,10 +4030,10 @@ msgid "n/a"
 msgstr "n/a"
 
 msgid "old-age"
-msgstr "正常老化"
+msgstr "已老化"
 
 msgid "prefail"
-msgstr "故障前兆"
+msgstr "即将故障"
 
 msgid "seconds"
 msgstr "秒"
