--- a/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
@@ -4,7 +4,7 @@
 # 
 # Translators:
 # Cyryl Sochacki <>, 2012
-# Cyryl Sochacki <cyrylsochacki@gmail.com>, 2012-2015
+# Cyryl Sochacki <cyrylsochacki@gmail.com>, 2012-2016
 # Jacek Niedziółka <>, 2012
 # jacekniedziolka71 <lucas71@interia.pl>, 2012
 # Jakub Górny <jakub@world.pl>, 2012
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-06-26 11:48+0000\n"
+"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/votdev/openmediavault/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -709,7 +709,7 @@ msgid "Cook Islands"
 msgstr "Cook Islands"
 
 msgid "Copy to clipboard"
-msgstr ""
+msgstr "Skopiuj do schowka"
 
 msgid "Costa Rica"
 msgstr "Costa Rica"
@@ -843,10 +843,10 @@ msgid "Device Mapper %s [%s, %s]"
 msgstr "Zmapowane urządzenie %s [%s, %s]"
 
 msgid "Device has a few bad sectors"
-msgstr ""
+msgstr "Urządzenie ma kilka uszkodzonych sektorów"
 
 msgid "Device has many bad sectors"
-msgstr ""
+msgstr "Urządzenie ma dużo uszkodzonych sektorów"
 
 msgid "Device information"
 msgstr "Informacje urządzenia"
@@ -864,7 +864,7 @@ msgid "Device was used outside of design parameters in the past"
 msgstr ""
 
 msgid "Device(s)"
-msgstr ""
+msgstr "Urządzenie(a)"
 
 msgid "Device/Label"
 msgstr "Urządzenie/Edtykieta"
@@ -1245,7 +1245,7 @@ msgid "FTP - Transfer log"
 msgstr "FTP - logi tranferu"
 
 msgid "FTP-Proxy"
-msgstr ""
+msgstr "FTP-Proxy"
 
 msgid "FXP"
 msgstr "FXP"
@@ -1386,7 +1386,7 @@ msgid "Gibraltar"
 msgstr "Gibraltar"
 
 msgid "Good"
-msgstr ""
+msgstr "Dobry"
 
 msgid "Greece"
 msgstr "Greece"
@@ -1437,16 +1437,16 @@ msgid "Guyana"
 msgstr "Guyana"
 
 msgid "HTTP-Proxy"
-msgstr ""
+msgstr "HTTP-Proxy"
 
 msgid "HTTPS-Proxy"
-msgstr ""
+msgstr "HTTPS-Proxy"
 
 msgid "Haiti"
 msgstr "Haiti"
 
 msgid "Hardware address"
-msgstr ""
+msgstr "Adres sprzętowy"
 
 msgid "Heard Island and McDonald Islands"
 msgstr "Heard Island and McDonald Islands"
@@ -1515,7 +1515,7 @@ msgid "Identify"
 msgstr "Identyfikuj"
 
 msgid "Identify As"
-msgstr ""
+msgstr "Identyfikujący się jako"
 
 msgid "Identify network interface device"
 msgstr "Identyfikuj interfejs sieciowy urządzenia"
@@ -2254,7 +2254,7 @@ msgid "Package information"
 msgstr "Informacja o pakiecie"
 
 msgid "Page not found"
-msgstr ""
+msgstr "Strony nie znaleziono"
 
 msgid "Pakistan"
 msgstr "Pakistan"
@@ -2505,7 +2505,7 @@ msgid "Protocol"
 msgstr "Protokół"
 
 msgid "Proxy"
-msgstr ""
+msgstr "Proxy"
 
 msgid "Public"
 msgstr "Publiczny"
@@ -2760,10 +2760,10 @@ msgid "SSH"
 msgstr "SSH"
 
 msgid "SSH certificate"
-msgstr ""
+msgstr "Certyfikat SSH"
 
 msgid "SSH port"
-msgstr ""
+msgstr "port SSH"
 
 msgid "SSID"
 msgstr "SSID"
@@ -2895,7 +2895,7 @@ msgid "Select a volume ..."
 msgstr "Wybierz wolumen ..."
 
 msgid "Select an authentication mode ..."
-msgstr ""
+msgstr "Wybierz rodzaj uwierzytelniania ..."
 
 msgid "Select devices to be added to the RAID device"
 msgstr "Wybierz urządzenia, które mają być dodane do urządzenia RAID"
@@ -3761,7 +3761,7 @@ msgid "United States Minor Outlying Islands"
 msgstr "United States Minor Outlying Islands"
 
 msgid "Unknown"
-msgstr ""
+msgstr "Nieznany"
 
 msgid "Unknown network interface type."
 msgstr "Nieznany typ interfejsu sieciowego."
@@ -4009,7 +4009,7 @@ msgid "Zimbabwe"
 msgstr "Zimbabwe"
 
 msgid "control panel"
-msgstr ""
+msgstr "panel sterowania"
 
 msgid "day"
 msgstr "dzień"
