--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (3.0.25) stable; urgency=low
 
   * Update locales.
   * Mantis 0001554: Can't define a hostname with blank domain name.
+  * Mantis 0001555: Boot log is blank.
   * Mantis 0001557: Fix omv-firstaid issue.
   * Mantis 0001558: Can't add a scheduled S.M.A.R.T. job.
 
