--- a/deb/openmediavault-iscsitarget/debian/changelog
+++ b/deb/openmediavault-iscsitarget/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-iscsitarget (3.1) stable; urgency=low
+
+  * Adapt to new framework.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 26 Jun 2016 15:11:11 +0200
+
 openmediavault-iscsitarget (3.0.3) stable; urgency=low
 
   * Update locales.
